# with-readline

./: .gitignore  .travis.yml  Makefile.am  README  acinclude.m4  buffer.c  configure.ac  design.txt  posix_openpt.c  pty-bsd.c  pty-unix98.c  strsignal.c  util.c  with-readline.1  with-readline.c  with-readline.h
ChangeLog.d/: with-readline--dev--0
scripts/: dist  prepare
scripts/travis/linux/gcc/: configure
scripts/travis/osx/clang/: configure  install
